syntax = "proto3";
package flares.sealedmonsters.v1beta1;

option go_package = "github.com/wangfeiping/flares/x/sealedmonsters/types";

import "gogoproto/gogo.proto";

message MsgReveal {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string solutionHash = 3; 
  string solution = 4; 
  string scavenger = 5; 
}

